# prnu-python

./: .gitignore  .travis.yml  Makefile  README.rst  example.py  requirements.txt  setup.cfg
prnu/: __init__.py  functions.py  prnu_utils.py
test/: __init__.py  test_prnu.py
