[metadata]
name = prnu
version = 1.0.0
author = Luca Bondi, Paolo Bestagini, Nicolò Bonettini, Simone Alghisi, Samuele Bortolotti, Massimo Rizzoli
author_email = luca.bondi@polimi.it, paolo.bestagini@polimi.it, nicolo.bonettini@polimi.it, simone.alghisi-1@studenti.unitn.it, samuele.bortolotti@studenti.unitn.it, massimo.rizzoli@studenti.unitn.it
license = MIT
description = Python function to extract and test PRNU.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/samuelebortolotti/prnu-python
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Topic :: Multimedia :: Graphics

[options]
packages = find:
python_requires = >=3.6
install_requires =
  numpy>=1.21.4
  pillow>=8.4.0
  pywavelets>=1.2.0
  scipy>=1.7.2
  scikit-learn>=1.0.1
  tqdm>=4.62.3
  torch>=1.8.1
  scikit-image>=0.18.3

[options.packages.find]
exclude = test*
